fix(study): SJIP-797 statistic align

--- a/src/views/StudyEntity/SummaryHeader/index.module.scss
+++ b/src/views/StudyEntity/SummaryHeader/index.module.scss
@@ -16,6 +16,7 @@
 .item {
   width: 100%;
   height: 100%;
+  display: flex;
   align-items: baseline;
   justify-content: center;
 
